# sunshine-capture-buildroot

./: README.md  development.conf  envsetup.sh
buildroot-external-sunshinecap/: COPYING  Config.in  external.desc  external.mk
buildroot-external-sunshinecap/board/friendlyelec/cm3588/: busybox.fragment  extlinux.conf  genimage.cfg  post-build.sh  u-boot.fragment
buildroot-external-sunshinecap/board/friendlyelec/cm3588/patches/linux/: 0001-cm3588-use-mmc-numbering-that-s-compatible-with-main.patch  linux.hash
buildroot-external-sunshinecap/board/friendlyelec/cm3588/patches/uboot/: 0001-cm3588-spl-prefer-booting-from-microsd.patch  0002-bootmeth_extlinux-provide-more-variables-to-extlinux.patch  0003-fs-squashfs-Set-ret-to-0-on-successful-read.patch
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/etc/systemd/networkd.conf.d/: buildroot.conf
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/etc/systemd/system/: data.mount  growpart-data.service  sunshine.service
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/etc/systemd/system/sshd.service.d/: buildroot.conf
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/etc/udev/rules.d/: 99-bootdev.rules  99-cpu.rules
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/root/.config/sunshine/: sunshine.conf
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/usr/lib/sunshine/: init-config
buildroot-external-sunshinecap/board/friendlyelec/cm3588/rootfs_overlay/usr/lib/udev/: is-bootdev
buildroot-external-sunshinecap/configs/: friendlyelec_cm3588_defconfig
buildroot-external-sunshinecap/package/ffmpeg-cbs/: CMakeLists.txt  Config.in  ffmpeg-cbs.mk
buildroot-external-sunshinecap/package/ffmpeg-sunshine/: 0001-lavu-add-NV15-and-NV20-bitstream-formats-support.patch  0002-lsws-add-NV15-and-NV20-formats-support.patch  0003-lavu-add-RKMPP-hwcontext.patch  0004-lavf-rkrga-add-RKRGA-scale-vpp-and-overlay-filters.patch  0005-lavc-rkmppdec-refactor-RKMPP-decoders-and-extend-cod.patch  0006-lavc-rkmppenc-refactor-RKMPP-encoders-and-extend-cod.patch  Config.in  ffmpeg-sunshine.hash  ffmpeg-sunshine.mk
buildroot-external-sunshinecap/package/growpart/: Config.in  growpart-systemd  growpart.hash  growpart.mk
buildroot-external-sunshinecap/package/librga/: Config.in  librga.hash  librga.mk
buildroot-external-sunshinecap/package/rkdeveloptool/: rkdeveloptool.mk
buildroot-external-sunshinecap/package/rkmpp/: Config.in  rkmpp.hash  rkmpp.mk
buildroot-external-sunshinecap/package/sunshine/: 0001-Buildroot.patch  Config.in  sunshine.hash  sunshine.mk
buildroot-external-sunshinecap/package/v4l-utils/: Config.in  v4l-utils.mk
